--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Generate
         run: make gen
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Commit new schemas
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Adding new schemas
           commit_user_name: Onderwijs Infrastructure Bot
