--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -7,11 +7,6 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup GitHub CLI
-        uses: Monorepo-Actions/setup-gh-cli@v1.0.0
-        with:
-          token: ${{ secrets.INFRABOT_TOKEN }}
-
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -25,6 +20,8 @@ jobs:
 
       - name: Generate
         run: make gen
+        env:
+          GITHUB_TOKEN: ${{ secrets.INFRABOT_TOKEN }}
 
       - name: Commit new schemas
         uses: stefanzweifel/git-auto-commit-action@v4
